--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "require": {
 	"php": ">=5.3.0",
-        "twig/twig": "~1.12"
+        "twig/twig": ">=1.12"
     },
     "autoload": {
         "psr-0": { "PVessel": "src/" }
